fix: improve visibility of widgets on mobile

--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -109,8 +109,8 @@ section {
   opacity: 0;
   overflow-x: hidden;
 
-  @media screen and (max-width: $sm-screen) {
-    padding: 2em 0em;
+  @media screen and (max-width: $md-screen) {
+    padding: 6em 0em 2em 0em;
   }
 
   &--is-loaded {
